Run many concurrent threads test on virtual threads